# Fixed required indicator on IE ^ Changed layout to 60/40 on edit banner client & edit contact - Removed deprecated IE6 stylesheet # Fixed language screen filter
git-svn-id: http://joomlacode.org/svn/joomla/development/trunk@17642 6f6e1ebd-4c2b-0410-823f-f34bde69bce9

--- a/administrator/templates/bluestork/css/ie7.css
+++ b/administrator/templates/bluestork/css/ie7.css
@@ -7,7 +7,7 @@
  */
 
 
-/* IE8 OVERRIDES */
+/* IE7 and IE 8 OVERRIDES */
 
 input {
 	border-width: expression(this.type=="radio"?'0px':this.type=="checkbox"?'0px':'1px');
@@ -34,4 +34,7 @@ div.toolbar-list a {
 }
 input, select, button {
 	font-size:1em;
+}
+label.required  {
+	background: url(../images/required.png) 90% 1px no-repeat;
 }
